[package]
name = "rk"
version = "0.1.0"
authors = ["mahdi robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2018"
description = "share file"
homepage = "https://github.com/rustland-fa/rock"
keywords = ["share", "file", "rock"]
license = "MIT"
repository = "https://github.com/rustland-fa/rock"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[dependencies]
aes-gcm-siv = "0.10.0"
bytes = "1.0.1"
clap = "3.0.0-beta.2"
confy = "0.4.0"
dirs = "3.0.2"
flate2 = { version = "1.0.20", features = ["tokio"] }
hex = "0.4.3"
indicatif = "0.16.2"
once_cell = "1.7.2"
pnet = "0.28.0"
rand = "0.8.3"
reqwest = "0.11.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.5"
tokio = { version = "1.6.1", features = ["full"] }
trust-dns-resolver = "0.20.3"
