[package]
name = "rk"
version = "0.1.0"
authors = ["mahdi robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2018"
description = "share file"
homepage = "https://github.com/rustland-fa/rock"
keywords = ["share", "file", "rock"]
license = "MIT"
repository = "https://github.com/rustland-fa/rock"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[dependencies]
aes-gcm-siv = "0.10.3"
bytes = "1.1.0"
clap = "3.0.0-beta.4"
confy = "0.4.0"
dirs = "4.0.0"
env_logger = "0.9.0"
flate2 = { version = "1.0.22", features = ["tokio"] }
futures = "0.3.17"
hex = "0.4.3"
indicatif = "0.16.2"
log = "0.4.14"
once_cell = "1.8.0"
pnet = "0.28.0"
rand = "0.8.4"
reqwest = "0.11.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sha2 = "0.9.8"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["full"] }
trust-dns-resolver = "0.20.3"
tokio-tungstenite = "0.15.0"
url = "2.2.2"
