[package]
name = "rk"
version = "0.1.0"
authors = ["mahdi robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2021"
description = "share file"
homepage = "https://github.com/rustland-fa/rock"
keywords = ["share", "file", "rock"]
license = "MIT"
repository = "https://github.com/rustland-fa/rock"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[dependencies]
aes-gcm-siv = "0.10.3"
bytes = "1.1.0"
clap = { version = "3.0.14", features = ["derive"] }
confy = "0.4.0"
dirs = "4.0.0"
env_logger = "0.9.0"
flate2 = { version = "1.0.22", features = ["tokio"] }
futures = "0.3.19"
hex = "0.4.3"
indicatif = "0.16.2"
log = "0.4.14"
once_cell = "1.9.0"
pnet = "0.29.0"
rand = "0.8.4"
reqwest = "0.11.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sha2 = "0.10.1"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full"] }
trust-dns-resolver = "0.20.3"
tokio-tungstenite = "0.16.1"
url = "2.2.2"
